@startuml
title VOPC - UC-02 Configure Application Environment

left to right direction
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
hide empty members

package "Boundary/UI" {
  class "Web UI" as WebUI <<boundary>> {
    -configurationDraft: EnvironmentConfigurationDraft
    +selectEnvironment(applicationId, environment)
    +selectCatalogVersionAndTarget(draft, catalogVersion, target)
    +setDirectConfigurationValue(draft, item, value)
    +bindResourceOutput(draft, item, resource, output)
    +bindWorkloadOutput(draft, variable, workload, output)
    +showConfigurationRequirements()
    +showValidResourceOutputs()
    +showValidWorkloadOutputs()
    +discardDraft()
  }
  class "Environment Configuration Draft" as ConfigurationDraft <<client-owned DTO>> {
    +applicationId: String
    +environment: String
    +baseApplicationDefinitionVersion: Integer
    +baseConfigurationRevision: String?
    +catalogVersion: String
    +deploymentTarget: String
    +bindings: List
  }
  class "Browser sessionStorage" as DraftStore <<client storage>> {
    +load(draftKey)
    +save(draftKey, nonSensitiveDraft)
    +remove(draftKey)
  }
  class "Environment Configuration API / Controller" as API <<control>> {
    -configurationService: ConfigurationService
    +selectEnvironment(applicationId, environment)
    +setDirectConfigurationValue(secret, secretValue)
    +requestResourceOutputs(resource, catalogVersion, target)
    +requestWorkloadOutputs(workload)
    +saveEnvironmentConfiguration(completeDraft, bases)
  }
}

package "Application services" {
  class "Environment Configuration Service" as ConfigurationService <<control>> {
    +selectEnvironment(applicationId, environment)
    +setDirectConfigurationValue(secret, secretValue)
    +requestResourceOutputs(resource, catalogVersion, target)
    +requestWorkloadOutputs(workload)
    +saveEnvironmentConfiguration(completeDraft, bases)
  }
}

package "Domain components" {
  class "Resource Output Catalog / Resource Definition Query" as ResourceCatalog <<control>> {
    -resourceDefinitions: List
    +resolveDefinition(resource, catalogVersion, target)
    +listValidOutputs(resource, catalogVersion, target)
    +listValidSensitiveOutputs(resource, catalogVersion, target)
  }
  class "Workload Output Catalog" as WorkloadCatalog <<control>> {
    -workloadDefinitions: List
    +listValidOutputs(workload)
  }
  class "Environment Configuration Validator" as Validator <<control>> {
    -validationRules: List
    +validateEnvironmentConfiguration(configuration, resolvedDefinitions)
  }
}

package "Integration abstractions" {
  interface "Secret Store / Secret Management Adapter" as SecretStore <<interface>> {
    -secretNamespace: String
    +storeSecret(applicationId, environment, secretValue)
  }
}

package "Persistence" {
  class "Application Query / Application Repository" as AppQuery <<entity>> {
    -applicationDefinitions: Collection
    +loadConfigurationRequirements(applicationId)
    +findLatestVersion(applicationId)
  }
  class "Environment Configuration Repository" as ConfigRepo <<entity>> {
    -environmentConfigurations: Collection
    +find(applicationId, environment)
    +findRevision(applicationId, environment)
    +saveIfBasesMatch(configurationWithValueReferences, bases)
  }
}

WebUI "1" *-- "0..1" ConfigurationDraft
WebUI "1" --> "1" DraftStore
WebUI "1" --> "1" API : load/query/stage/save only
API "1" --> "1" ConfigurationService
ConfigurationService "1" --> "1" AppQuery
ConfigurationService ..> ResourceCatalog
ConfigurationService ..> WorkloadCatalog
ConfigurationService ..> Validator
ConfigurationService ..> SecretStore
ConfigurationService "1" --> "1" ConfigRepo

note right of ConfigurationDraft
  CLIENT-OWNED DTO, not a domain object.
  sessionStorage excludes plaintext Secret.
  The two base values enable optimistic concurrency.
  catalogVersion and deploymentTarget select which
  Resource Definition applies; ADR-020 keeps both
  out of durable storage.
end note

note right of ConfigurationService
  Stateless between edit requests.
  Normal field/binding edits do not call the API.
  Secure Secret staging remains a server operation;
  its cleanup lifecycle is deferred to D07.
end note

note right of Validator
  Validates against the latest Application Definition version:
  every referenced output must belong to a resource or workload
  that the owning workload depends on, and a resource output must
  exist in the Resource Definition resolved from the draft's
  catalogVersion and deploymentTarget.
  Environment is one of STAGING, PRODUCTION.
end note

@enduml
